<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:clickable="true"
    android:background="?attr/selectableItemBackground"
    android:focusable="true">

    <android.support.v7.widget.CardView
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rivhTvCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/hint_cliente"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="0.4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="InefficientWeight">

                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_fecha_hora_dos_puntos"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/rivhTvFechaHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_fecha_hora"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_total_dos_puntos"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/rivhTvTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cero_decimal_text"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>