<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:clickable="true"
    android:background="?attr/selectableItemBackground"
    android:focusable="true">

    <android.support.v7.widget.CardView
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/caja_producto"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/ripvhCivProducto"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/ripvhTvNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_del_producto_item"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="0.33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_precio"
                        />
                    <TextView
                        android:gravity="center"
                        android:layout_weight="0.33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad_titulo"
                        />
                    <TextView
                        android:gravity="center"
                        android:layout_weight="0.33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_soles"

                        />

                </LinearLayout>

                <LinearLayout
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="0.33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ripvhTvCantidad"
                        android:text="@string/cero_decimal_text"
                        />
                    <TextView
                        android:gravity="center"
                        android:layout_weight="0.33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ripvhTvPrecio"
                        android:text="@string/cantidad_producto_item"
                        />
                    <TextView
                        android:gravity="center"
                        android:layout_weight="0.33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ripvhTvTotal"
                        android:text="@string/cero_decimal_text"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>