<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:id="@+id/recyclerView_id"
    android:background="?attr/selectableItemBackground"
    >

    <android.support.v7.widget.CardView
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/ricTvNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:text="@string/hint_cliente"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:visibility="visible"
                        android:id="@+id/ricIvDireccion"
                        android:src="@drawable/ic_opt_item_dir"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/descri_direcc"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />
                    <ImageView
                        android:id="@+id/ricIvCelular"
                        android:src="@drawable/ic_opt_item_cel"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/descri_celular"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />
                    <ImageView
                        android:id="@+id/ricIvEmail"
                        android:src="@drawable/ic_opt_item_mail"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/descri_email"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>