<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VentaHistorialDetalleActivity">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/negro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fecha_hora"
                    tools:ignore="NestedWeights">

                    <android.support.design.widget.TextInputEditText
                        android:focusable="false"
                        android:id="@+id/avhdTietFechaHora"
                        android:enabled="false"
                        android:textColor="@color/negro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_fecha_hora"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/negro"
                    android:id="@+id/avhdTilTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombre_del_cliente"
                    tools:ignore="NestedWeights">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/avhdTietCliente"
                        android:focusable="false"
                        android:enabled="false"
                        android:textColor="@color/negro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_nombre_del_cliente"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/negro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_observacion">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/avhdTietObservacion"
                        android:focusable="false"
                        android:enabled="false"
                        android:textColor="@color/negro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_observacion"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.99"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/avhdRvProducto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:gravity="center"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/avhdBtCancelar"
                    android:background="@drawable/button_circle_cancelar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/negro"
                    android:background="@color/blanco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_total">

                    <android.support.design.widget.TextInputEditText
                        android:textColor="@color/negro"
                        android:enabled="false"
                        android:id="@+id/avhdTietTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:text="@string/cero_decimal_text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>