<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VentaRealizarActivity">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:id="@+id/avllPrincipal"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_weight="0.0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:background="@color/blanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cliente">

                <AutoCompleteTextView
                    android:id="@+id/avrActvCliente"
                    android:completionThreshold="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:background="@color/blanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_observacion">

                <android.support.design.widget.TextInputEditText
                    android:lines="2"
                    android:id="@+id/avrTietObservacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.99"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/avrRvProducto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_gravity="center"
                        android:id="@+id/avrBtVenta"
                        android:background="@drawable/button_circle_agregar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="@color/negro"
                        android:background="@color/blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_total">

                        <android.support.design.widget.TextInputEditText
                            android:textColor="@color/negro"
                            android:enabled="false"
                            android:id="@+id/avrTietTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAlignment="center"
                            android:text="@string/cero_decimal_text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>